# Decode

./: README.md
gui_demo_Qt/GeneralSecurityMonitoring_UI/: GeneralSecurityMonitoring_UI.pro  images.qrc
gui_demo_Qt/GeneralSecurityMonitoring_UI/config/: caisa_config_blueUniform.json  caisa_config_fall.json  caisa_config_firesmoke.json  caisa_config_helmet.json  caisa_config_leakoil_indoor.json  caisa_config_leakoil_outdoor.json  caisa_config_skin.json  caisa_config_smokephone.json  caisa_config_vest.json
gui_demo_Qt/GeneralSecurityMonitoring_UI/images/: loading
gui_demo_Qt/GeneralSecurityMonitoring_UI/inc/: cameradecode.h  generalsecuritymonitor.h  mainwindow.h  publicheader.h  timerthread.h  videolabel.h
gui_demo_Qt/GeneralSecurityMonitoring_UI/src/: cameradecode.cpp  generalsecuritymonitor.cpp  main.cpp  mainwindow.cpp  publicheader.cpp  timerthread.cpp  videolabel.cpp
gui_demo_Qt/GeneralSecurityMonitoring_UI/ui/: mainwindow.ui
hw_decode/: CMakeLists.txt  camera_config.json  main.cpp  readme.md
hw_decode/inc/: cameradecode.h
hw_decode/src/: cameradecode.cpp
model1/: CMakeLists.txt  caisa_config_leakoil.json  caisa_config_smokephone.json  caisa_config_vest.json  main.cpp  readme.md
model2/: CMakeLists.txt  caisa_config.json  caisa_config_leakoil.json  caisa_config_smokephone.json  caisa_config_vest.json  main.cpp  readme.md
model2/include/: decode_detection.h
model2/src/: decode_detection.cpp
webService/computing-node/: CMakeLists.txt  README.md  computing.cpp
webService/computing-node/config/: cn_init.config  cn_init_local.config
webService/computing-node/include/: common.h  imageswitch.h  run.h  tcp_client.h  tcp_service.h
webService/computing-node/src/: common.cpp  imageswitch.cpp  run.cpp  tcp_client.cpp  tcp_service.cpp
webService/decoding-node/: .gitignore  CMakeLists.txt  README.md  decoding.cpp
webService/decoding-node/config/: dn_init.config  dn_init_local.config
webService/decoding-node/include/: Imageswitch.h  cameraDecode.h  common.h  ctrl_c.h  run.h  tcp_service.h
webService/decoding-node/src/: Imageswitch.cpp  cameraDecode.cpp  common.cpp  ctrl_c.cpp  run.cpp  tcp_service.cpp
webService/encoding-node/: .gitignore  CMakeLists.txt  encoding.cpp
webService/encoding-node/config/: color.json  en_init.config  en_init_local.config  tasks.json
webService/encoding-node/include/: cameraEncode.h  common.h  tcp_client.h
webService/encoding-node/src/: cameraEncode.cpp  common.cpp  tcp_client.cpp
